[gd_scene load_steps=6 format=3 uid="uid://sfms2jukwolq"]

[ext_resource type="Script" path="res://Scripts/Chunks and Enemyspawner/MeteorChunk.gd" id="1_nw16q"]
[ext_resource type="PackedScene" uid="uid://p3fa31lut2b3" path="res://PackedScenes/Enemys/Meteor.tscn" id="2_f30qd"]
[ext_resource type="PackedScene" uid="uid://cndedkbc3ogjr" path="res://PackedScenes/Enemys/health_meteor.tscn" id="3_d5aiy"]
[ext_resource type="PackedScene" uid="uid://bgdofur02d5c3" path="res://PackedScenes/wall.tscn" id="3_yyj78"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4eiav"]

[node name="MeteorChunk" type="Node3D" groups=["Chunks"]]
script = ExtResource("1_nw16q")
meteor_scene = ExtResource("2_f30qd")
h_meteor_scene = ExtResource("3_d5aiy")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_4eiav")

[node name="WallRight" parent="." instance=ExtResource("3_yyj78")]

[node name="WallLeft" parent="." instance=ExtResource("3_yyj78")]
transform = Transform3D(-1.82768e-06, 0, -41.8124, 0, 50.2143, 0, 41.8124, 0, -1.82768e-06, 0, 0, 0)

[node name="WallUp" parent="." instance=ExtResource("3_yyj78")]
transform = Transform3D(-7.64196e-05, 2521.48, -7.64196e-05, 0, -0.000110217, -1748.28, -1748.28, -0.000110217, 3.34041e-12, 0, 0, 0)
skeleton = NodePath("../WallLeft")

[node name="WallDown" parent="." instance=ExtResource("3_yyj78")]
transform = Transform3D(-1.82768e-06, -50.2143, -1.82768e-06, 0, -2.19494e-06, 41.8124, -41.8124, 2.19494e-06, 7.98903e-14, 0, 0, 0)
